--- a/www-client/chromium/ChangeLog
+++ b/www-client/chromium/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for www-client/chromium
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/chromium/ChangeLog,v 1.734 2012/10/11 14:32:47 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/chromium/ChangeLog,v 1.735 2012/10/11 16:40:53 ago Exp $
+
+  11 Oct 2012; Agostino Sarubbo <ago@gentoo.org> chromium-22.0.1229.94.ebuild:
+  Stable for amd64, wrt bug #437984
 
   11 Oct 2012; Mike Gilbert <floppym@gentoo.org> -chromium-22.0.1229.79.ebuild,
   -chromium-22.0.1229.91.ebuild:
