--- a/mail-mta/exim/ChangeLog
+++ b/mail-mta/exim/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for mail-mta/exim
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-mta/exim/ChangeLog,v 1.227 2012/10/11 14:59:11 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-mta/exim/ChangeLog,v 1.228 2012/10/11 19:01:28 blueness Exp $
+
+  11 Oct 2012; Anthony G. Basile <blueness@gentoo.org> exim-4.80.ebuild:
+  stable ppc64, bug #437746
 
   11 Oct 2012; Jeroen Roovers <jer@gentoo.org> exim-4.80.ebuild:
   Stable for HPPA (bug #437746).
