--- a/www-client/chromium/ChangeLog
+++ b/www-client/chromium/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for www-client/chromium
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/chromium/ChangeLog,v 1.736 2012/10/11 21:10:34 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/chromium/ChangeLog,v 1.737 2012/10/11 21:12:34 ago Exp $
+
+  11 Oct 2012; Agostino Sarubbo <ago@gentoo.org> -chromium-22.0.1229.92.ebuild:
+  Remove old
 
   11 Oct 2012; Agostino Sarubbo <ago@gentoo.org> chromium-22.0.1229.94.ebuild:
   Stable for X86, wrt bug #437984
