--- a/media-libs/libpng/ChangeLog
+++ b/media-libs/libpng/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/libpng
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libpng/ChangeLog,v 1.378 2012/10/11 11:33:40 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libpng/ChangeLog,v 1.379 2012/10/11 23:14:54 blueness Exp $
+
+  11 Oct 2012; Anthony G. Basile <blueness@gentoo.org> libpng-1.5.13-r1.ebuild:
+  stable ppc, bug #436592
 
   11 Oct 2012; Markus Meier <maekke@gentoo.org> libpng-1.5.13-r1.ebuild:
   arm stable, bug #436592
