--- a/net-misc/dhcp/ChangeLog
+++ b/net-misc/dhcp/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/dhcp
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/dhcp/ChangeLog,v 1.223 2012/10/11 14:22:03 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/dhcp/ChangeLog,v 1.224 2012/10/11 23:37:24 blueness Exp $
+
+  11 Oct 2012; Anthony G. Basile <blueness@gentoo.org> dhcp-4.2.4_p2.ebuild:
+  stable ppc ppc64, bug #434880
 
   11 Oct 2012; Agostino Sarubbo <ago@gentoo.org> dhcp-4.2.4_p2.ebuild:
   Stable for amd64, wrt bug #434880
