--- a/www-servers/apache/ChangeLog
+++ b/www-servers/apache/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for www-servers/apache
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-servers/apache/ChangeLog,v 1.194 2012/05/12 18:12:05 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-servers/apache/ChangeLog,v 1.195 2012/10/12 05:31:29 patrick Exp $
+
+*apache-2.2.23 (12 Oct 2012)
+
+  12 Oct 2012; Patrick Lauer <patrick@gentoo.org> +apache-2.2.23.ebuild:
+  Bump for #432284
 
   12 May 2012; Alexis Ballier <aballier@gentoo.org> apache-2.2.22-r1.ebuild:
   keyword ~amd64-fbsd
