--- a/app-admin/apache-tools/ChangeLog
+++ b/app-admin/apache-tools/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-admin/apache-tools
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/apache-tools/ChangeLog,v 1.119 2012/10/12 05:35:02 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/apache-tools/ChangeLog,v 1.120 2012/10/12 06:05:18 patrick Exp $
+
+*apache-tools-2.4.3 (12 Oct 2012)
+
+  12 Oct 2012; Patrick Lauer <patrick@gentoo.org> +apache-tools-2.4.3.ebuild,
+  -apache-tools-2.4.2.ebuild:
+  Bump
 
 *apache-tools-2.2.23 (12 Oct 2012)
 
