--- a/www-servers/apache/ChangeLog
+++ b/www-servers/apache/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for www-servers/apache
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-servers/apache/ChangeLog,v 1.195 2012/10/12 05:31:29 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-servers/apache/ChangeLog,v 1.196 2012/10/12 06:06:22 patrick Exp $
+
+*apache-2.4.3 (12 Oct 2012)
+
+  12 Oct 2012; Patrick Lauer <patrick@gentoo.org> +apache-2.4.3.ebuild,
+  -apache-2.4.2.ebuild, metadata.xml:
+  Bump with fixes from #410607 #411433 #433736
 
 *apache-2.2.23 (12 Oct 2012)
 
