--- a/net-wireless/hostapd/ChangeLog
+++ b/net-wireless/hostapd/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-wireless/hostapd
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/hostapd/ChangeLog,v 1.132 2012/10/12 00:52:20 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/hostapd/ChangeLog,v 1.133 2012/10/12 06:47:01 ago Exp $
+
+  12 Oct 2012; Agostino Sarubbo <ago@gentoo.org> -hostapd-0.7.3.ebuild,
+  -hostapd-1.0-r1.ebuild, -hostapd-1.0-r2.ebuild, -hostapd-1.0-r3.ebuild:
+  Remove old
 
   12 Oct 2012; Anthony G. Basile <blueness@gentoo.org> hostapd-1.0-r4.ebuild:
   stable ppc, bug #437830
