--- a/dev-php/xdebug-client/ChangeLog
+++ b/dev-php/xdebug-client/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-php/xdebug-client
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php/xdebug-client/ChangeLog,v 1.47 2012/10/10 15:45:18 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php/xdebug-client/ChangeLog,v 1.48 2012/10/12 07:15:08 ago Exp $
+
+  12 Oct 2012; Agostino Sarubbo <ago@gentoo.org> xdebug-client-2.2.1.ebuild:
+  eapi4
 
   10 Oct 2012; Brent Baude <ranger@gentoo.org> xdebug-client-2.2.1.ebuild:
   Marking xdebug-client-2.2.1 ppc for bug 433267
@@ -219,4 +222,3 @@
   27 Oct 2006; Sebastian Bergmann <sebastian@gentoo.org> +metadata.xml,
   +xdebug-client-2.0.0_rc1.ebuild:
   Initial ebuild for bug #153019.
-
