--- a/net-misc/ifenslave/ChangeLog
+++ b/net-misc/ifenslave/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/ifenslave
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/ifenslave/ChangeLog,v 1.27 2012/10/10 15:43:44 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/ifenslave/ChangeLog,v 1.28 2012/10/12 07:46:12 ago Exp $
+
+  12 Oct 2012; Agostino Sarubbo <ago@gentoo.org> ifenslave-1.1.0-r6.ebuild:
+  Stable for amd64, wrt bug #433337
 
   10 Oct 2012; Brent Baude <ranger@gentoo.org> ifenslave-1.1.0-r6.ebuild:
   Marking ifenslave-1.1.0-r6 ppc for bug 433337
