--- a/app-portage/portpeek/ChangeLog
+++ b/app-portage/portpeek/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-portage/portpeek
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/portpeek/ChangeLog,v 1.152 2012/09/08 19:16:20 mpagano Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/portpeek/ChangeLog,v 1.153 2012/10/12 07:53:20 ago Exp $
+
+  12 Oct 2012; Agostino Sarubbo <ago@gentoo.org> portpeek-2.0.25.ebuild:
+  Stable for amd64, wrt bug #437832
 
   08 Sep 2012; Michael Pagano <mpagano@gentoo.org> -portpeek-1.9.70.ebuild:
   Remove old version
