--- a/net-analyzer/ttcp/ChangeLog
+++ b/net-analyzer/ttcp/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-analyzer/ttcp
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/ttcp/ChangeLog,v 1.22 2012/10/12 10:14:02 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/ttcp/ChangeLog,v 1.23 2012/10/12 10:16:50 pinkbyte Exp $
+
+  12 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> ttcp-1.12.ebuild,
+  ttcp-1.12-r1.ebuild:
+  QA: assign RDEPEND explicitly
 
 *ttcp-1.12-r2 (12 Oct 2012)
 
