--- a/net-analyzer/ippl/ChangeLog
+++ b/net-analyzer/ippl/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-analyzer/ippl
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/ippl/ChangeLog,v 1.20 2012/10/12 10:43:32 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/ippl/ChangeLog,v 1.21 2012/10/12 10:46:15 pinkbyte Exp $
+
+  12 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> ippl-1.4.14-r1.ebuild,
+  ippl-1.4.14-r2.ebuild, ippl-1.4.14-r3.ebuild:
+  Replace yacc dependency atoms with virtual/yacc
 
 *ippl-1.4.14-r3 (12 Oct 2012)
 
