--- a/dev-util/shc/ChangeLog
+++ b/dev-util/shc/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/shc
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/shc/ChangeLog,v 1.25 2012/10/12 07:52:36 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/shc/ChangeLog,v 1.26 2012/10/12 11:03:07 blueness Exp $
+
+  12 Oct 2012; Anthony G. Basile <blueness@gentoo.org> shc-3.8.9.ebuild:
+  stable ppc, bug #438080
 
   12 Oct 2012; Agostino Sarubbo <ago@gentoo.org> shc-3.8.9.ebuild:
   Stable for amd64, wrt bug #438080
