--- a/app-portage/portpeek/ChangeLog
+++ b/app-portage/portpeek/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-portage/portpeek
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/portpeek/ChangeLog,v 1.153 2012/10/12 07:53:20 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/portpeek/ChangeLog,v 1.154 2012/10/12 11:49:00 blueness Exp $
+
+  12 Oct 2012; Anthony G. Basile <blueness@gentoo.org> portpeek-2.0.25.ebuild:
+  stable ppc, bug #437832
 
   12 Oct 2012; Agostino Sarubbo <ago@gentoo.org> portpeek-2.0.25.ebuild:
   Stable for amd64, wrt bug #437832
@@ -724,4 +727,3 @@
   10 Oct 2007; Mike Pagano <mpagano@gentoo.org> +metadata.xml,
   +portpeek-1.5.7.ebuild:
   Initial ebuild for new package.
-
