--- a/games-emulation/visualboyadvance/ChangeLog
+++ b/games-emulation/visualboyadvance/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for games-emulation/visualboyadvance
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-emulation/visualboyadvance/ChangeLog,v 1.45 2012/10/12 14:22:25 naota Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-emulation/visualboyadvance/ChangeLog,v 1.46 2012/10/12 14:26:32 naota Exp $
+
+  12 Oct 2012;  <naota@gentoo.org> visualboyadvance-1.7.2-r3.ebuild:
+  Revert mis-added ~x86-fbsd.
 
   12 Oct 2012;  <naota@gentoo.org> visualboyadvance-1.7.2-r3.ebuild:
   Add ~x86-fbsd wrt bug #233624
