--- a/sys-apps/hwids/ChangeLog
+++ b/sys-apps/hwids/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/hwids
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/hwids/ChangeLog,v 1.28 2012/10/12 00:22:06 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/hwids/ChangeLog,v 1.29 2012/10/12 15:23:50 flameeyes Exp $
+
+*hwids-20121012 (12 Oct 2012)
+
+  12 Oct 2012; Diego E. Pettenò <flameeyes@gentoo.org> +hwids-20121012.ebuild,
+  -hwids-20121010.ebuild:
+  Version bump.
 
 *hwids-20121010 (12 Oct 2012)
 
