--- a/net-analyzer/ettercap/ChangeLog
+++ b/net-analyzer/ettercap/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/ettercap
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/ettercap/ChangeLog,v 1.101 2012/10/11 23:07:31 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/ettercap/ChangeLog,v 1.102 2012/10/12 16:27:46 jer Exp $
+
+  12 Oct 2012; Jeroen Roovers <jer@gentoo.org> ettercap-0.7.5.ebuild:
+  Stable for HPPA (bug #340897).
 
   11 Oct 2012; Anthony G. Basile <blueness@gentoo.org> ettercap-0.7.5.ebuild:
   stable ppc ppc64, bug #340897
