--- a/eclass/ChangeLog
+++ b/eclass/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for eclass directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.439 2012/10/12 13:20:56 alexxy Exp $
+# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.440 2012/10/12 16:49:59 alexxy Exp $
+
+  12 Oct 2012; Alexey Shvetsov <alexxy@gentoo.org> openib.eclass:
+  Fix typo
 
   12 Oct 2012; Alexey Shvetsov <alexxy@gentoo.org> openib.eclass:
   [ofed] finalyze 3.5
