--- a/net-analyzer/ettercap/ChangeLog
+++ b/net-analyzer/ettercap/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for net-analyzer/ettercap
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/ettercap/ChangeLog,v 1.102 2012/10/12 16:27:46 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/ettercap/ChangeLog,v 1.103 2012/10/12 17:13:01 zerochaos Exp $
 
   12 Oct 2012; Jeroen Roovers <jer@gentoo.org> ettercap-0.7.5.ebuild:
   Stable for HPPA (bug #340897).
@@ -9,7 +9,7 @@
   stable ppc ppc64, bug #340897
 
   11 Oct 2012; Agostino Sarubbo <ago@gentoo.org> ettercap-0.7.5.ebuild:
-  Stable for AMD64, wrt bug #430897
+  Stable for AMD64, wrt bug #340897
 
   11 Oct 2012; Andreas Schuerch <nativemad@gentoo.org> ettercap-0.7.5.ebuild:
   x86 stable, see bug 340897
