--- a/x11-misc/xteddy/ChangeLog
+++ b/x11-misc/xteddy/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/xteddy
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/xteddy/ChangeLog,v 1.9 2012/05/05 04:53:52 jdhore Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/xteddy/ChangeLog,v 1.10 2012/10/12 17:35:46 pinkbyte Exp $
+
+  12 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> xteddy-2.2.ebuild:
+  Fix paths in xtoys script wrt bug #404899
 
   05 May 2012; Jeff Horelick <jdhore@gentoo.org> xteddy-2.2.ebuild:
   dev-util/pkgconfig -> virtual/pkgconfig
