--- a/x11-misc/macopix/ChangeLog
+++ b/x11-misc/macopix/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/macopix
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/macopix/ChangeLog,v 1.23 2012/10/12 12:53:00 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/macopix/ChangeLog,v 1.24 2012/10/12 17:40:56 ago Exp $
+
+  12 Oct 2012; Agostino Sarubbo <ago@gentoo.org> macopix-1.7.4.ebuild:
+  Stable for amd64, wrt bug #322851
 
   12 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> macopix-1.7.4.ebuild:
   Fix QA issues: add missing die statements, escape variables
