--- a/mail-mta/postfix/ChangeLog
+++ b/mail-mta/postfix/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for mail-mta/postfix
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-mta/postfix/ChangeLog,v 1.387 2012/10/11 15:44:42 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-mta/postfix/ChangeLog,v 1.388 2012/10/12 19:04:30 ago Exp $
+
+  12 Oct 2012; Agostino Sarubbo <ago@gentoo.org> postfix-2.9.4.ebuild:
+  Stable for amd64, wrt bug #437602
 
   11 Oct 2012; Anthony G. Basile <blueness@gentoo.org> postfix-2.9.4.ebuild:
   stable ppc64, bug #437602
