--- a/mail-mta/postfix/ChangeLog
+++ b/mail-mta/postfix/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for mail-mta/postfix
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-mta/postfix/ChangeLog,v 1.388 2012/10/12 19:04:30 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-mta/postfix/ChangeLog,v 1.389 2012/10/12 19:31:58 eras Exp $
+
+  12 Oct 2012; Eray Aslan <eraya@gentoo.org> postfix-2.10_pre20121007.ebuild,
+  postfix-2.9.4.ebuild:
+  Use system ar and ranlib - bug #438156
 
   12 Oct 2012; Agostino Sarubbo <ago@gentoo.org> postfix-2.9.4.ebuild:
   Stable for amd64, wrt bug #437602
