--- a/sys-kernel/gentoo-sources/ChangeLog
+++ b/sys-kernel/gentoo-sources/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/gentoo-sources
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.1019 2012/10/08 14:34:40 mpagano Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.1020 2012/10/13 00:04:37 mpagano Exp $
+
+*gentoo-sources-3.6.2 (13 Oct 2012)
+
+  13 Oct 2012; Michael Pagano <mpagano@gentoo.org>
+  +gentoo-sources-3.6.2.ebuild:
+  Linux patch 3.6.2
 
 *gentoo-sources-3.0.45 (08 Oct 2012)
 
