--- a/dev-python/python-irclib/ChangeLog
+++ b/dev-python/python-irclib/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/python-irclib
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/python-irclib/ChangeLog,v 1.10 2011/08/19 17:21:31 hwoarang Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/python-irclib/ChangeLog,v 1.11 2012/10/13 05:25:20 patrick Exp $
+
+*python-irclib-3.2.2 (13 Oct 2012)
+
+  13 Oct 2012; Patrick Lauer <patrick@gentoo.org> +python-irclib-3.2.2.ebuild:
+  Bump, few changes in upstream locations
 
   19 Aug 2011; Markos Chandras <hwoarang@gentoo.org> metadata.xml:
   remove radek from metadata.xml
@@ -36,4 +41,3 @@
   22 Oct 2006; Radoslaw Stachowiak <radek@gentoo.org> +python-irclib-0.4.6.ebuild:
   Initial import. Ebuild submitted by Steingrim Dovland and Conrad Kostecki.
   Closes bug #43826
-
