--- a/x11-misc/xteddy/ChangeLog
+++ b/x11-misc/xteddy/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/xteddy
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/xteddy/ChangeLog,v 1.12 2012/10/12 18:23:40 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/xteddy/ChangeLog,v 1.13 2012/10/13 08:02:41 ago Exp $
+
+  13 Oct 2012; Agostino Sarubbo <ago@gentoo.org> -xteddy-2.0.1.ebuild:
+  Remove old
 
   12 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> xteddy-2.2.ebuild:
   Default xteddy image files format is png, so add apropriate USE-flag
@@ -44,4 +47,3 @@
   05 Sep 2005; Andrej Kacian <ticho@gentoo.org> +metadata.xml,
   +xteddy-2.0.1.ebuild:
   Initial import.
-
