--- a/x11-misc/xteddy/ChangeLog
+++ b/x11-misc/xteddy/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/xteddy
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/xteddy/ChangeLog,v 1.13 2012/10/13 08:02:41 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/xteddy/ChangeLog,v 1.14 2012/10/13 08:05:54 ago Exp $
+
+  13 Oct 2012; Agostino Sarubbo <ago@gentoo.org> xteddy-2.2.ebuild:
+  Stable for amd64, wrt bug #404899
 
   13 Oct 2012; Agostino Sarubbo <ago@gentoo.org> -xteddy-2.0.1.ebuild:
   Remove old
