--- a/www-servers/apache/ChangeLog
+++ b/www-servers/apache/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for www-servers/apache
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-servers/apache/ChangeLog,v 1.196 2012/10/12 06:06:22 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-servers/apache/ChangeLog,v 1.197 2012/10/13 08:06:22 ago Exp $
+
+  13 Oct 2012; Agostino Sarubbo <ago@gentoo.org> apache-2.2.23.ebuild:
+  Stable for amd64, wrt bug #432284
 
 *apache-2.4.3 (12 Oct 2012)
 
