--- a/app-admin/apache-tools/ChangeLog
+++ b/app-admin/apache-tools/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/apache-tools
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/apache-tools/ChangeLog,v 1.120 2012/10/12 06:05:18 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/apache-tools/ChangeLog,v 1.121 2012/10/13 08:06:38 ago Exp $
+
+  13 Oct 2012; Agostino Sarubbo <ago@gentoo.org> apache-tools-2.2.23.ebuild:
+  Stable for amd64, wrt bug #432284
 
 *apache-tools-2.4.3 (12 Oct 2012)
 
