--- a/sys-kernel/vanilla-sources/ChangeLog
+++ b/sys-kernel/vanilla-sources/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/vanilla-sources
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/vanilla-sources/ChangeLog,v 1.1060 2012/10/10 23:32:42 mpagano Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/vanilla-sources/ChangeLog,v 1.1061 2012/10/13 14:10:12 mpagano Exp $
+
+*vanilla-sources-3.6.2 (13 Oct 2012)
+
+  13 Oct 2012; Michael Pagano <mpagano@gentoo.org>
+  +vanilla-sources-3.6.2.ebuild:
+  Version bump
 
 *vanilla-sources-3.2.31 (10 Oct 2012)
 
