--- a/sys-kernel/vanilla-sources/ChangeLog
+++ b/sys-kernel/vanilla-sources/ChangeLog
@@ -1,6 +1,15 @@
 # ChangeLog for sys-kernel/vanilla-sources
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/vanilla-sources/ChangeLog,v 1.1061 2012/10/13 14:10:12 mpagano Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/vanilla-sources/ChangeLog,v 1.1062 2012/10/13 14:35:43 mpagano Exp $
+
+*vanilla-sources-3.5.7 (13 Oct 2012)
+*vanilla-sources-3.4.14 (13 Oct 2012)
+*vanilla-sources-3.0.46 (13 Oct 2012)
+
+  13 Oct 2012; Michael Pagano <mpagano@gentoo.org>
+  +vanilla-sources-3.0.46.ebuild, +vanilla-sources-3.4.14.ebuild,
+  +vanilla-sources-3.5.7.ebuild:
+  Version bumps
 
 *vanilla-sources-3.6.2 (13 Oct 2012)
 
