--- a/dev-python/webtest/ChangeLog
+++ b/dev-python/webtest/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/webtest
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/webtest/ChangeLog,v 1.39 2012/10/12 01:04:23 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/webtest/ChangeLog,v 1.40 2012/10/13 17:12:56 armin76 Exp $
+
+  13 Oct 2012; Raúl Porcel <armin76@gentoo.org> webtest-1.2.3.ebuild,
+  webtest-1.3.ebuild, webtest-1.3.4.ebuild, webtest-1.4.0.ebuild:
+  s390/sh/sparc stable wrt #427546
 
   12 Oct 2012; Mike Gilbert <floppym@gentoo.org> webtest-1.4.0.ebuild:
   Drop unnecessary patch, thanks Arfrever.
