--- a/app-misc/tmux/ChangeLog
+++ b/app-misc/tmux/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for app-misc/tmux
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/tmux/ChangeLog,v 1.81 2012/09/26 12:19:51 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/tmux/ChangeLog,v 1.82 2012/10/13 17:18:59 radhermit Exp $
+
+*tmux-1.7 (13 Oct 2012)
+
+  13 Oct 2012; Tim Harder <radhermit@gentoo.org> +tmux-1.7.ebuild:
+  Version bump.
 
   26 Sep 2012; Anthony G. Basile <blueness@gentoo.org> tmux-1.5.ebuild,
   tmux-1.6.ebuild:
