--- a/app-misc/tmux/ChangeLog
+++ b/app-misc/tmux/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-misc/tmux
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/tmux/ChangeLog,v 1.83 2012/10/13 17:23:16 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/tmux/ChangeLog,v 1.84 2012/10/13 17:24:18 radhermit Exp $
+
+  13 Oct 2012; Tim Harder <radhermit@gentoo.org> -tmux-1.5.ebuild,
+  -files/tmux-1.5-darwin.patch:
+  Remove old.
 
   13 Oct 2012; Tim Harder <radhermit@gentoo.org> tmux-1.6.ebuild:
   Stabilize for x86 (bug #435320) and remove unused eutils inherit.
