--- a/app-misc/tmux/ChangeLog
+++ b/app-misc/tmux/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-misc/tmux
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/tmux/ChangeLog,v 1.84 2012/10/13 17:24:18 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/tmux/ChangeLog,v 1.85 2012/10/13 17:34:20 radhermit Exp $
+
+  13 Oct 2012; Tim Harder <radhermit@gentoo.org> tmux-9999.ebuild:
+  Use upstream git repo for live ebuild and other updates.
 
   13 Oct 2012; Tim Harder <radhermit@gentoo.org> -tmux-1.5.ebuild,
   -files/tmux-1.5-darwin.patch:
