--- a/media-sound/lilypond/ChangeLog
+++ b/media-sound/lilypond/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/lilypond
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/lilypond/ChangeLog,v 1.128 2012/09/30 02:40:47 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/lilypond/ChangeLog,v 1.129 2012/10/13 17:43:16 radhermit Exp $
+
+*lilypond-2.17.4 (13 Oct 2012)
+
+  13 Oct 2012; Tim Harder <radhermit@gentoo.org> +lilypond-2.17.4.ebuild:
+  Version bump.
 
 *lilypond-9999 (30 Sep 2012)
 
