--- a/sys-kernel/hardened-sources/ChangeLog
+++ b/sys-kernel/hardened-sources/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/hardened-sources
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/hardened-sources/ChangeLog,v 1.704 2012/10/13 18:48:46 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/hardened-sources/ChangeLog,v 1.705 2012/10/13 18:50:24 blueness Exp $
+
+*hardened-sources-3.2.31 (13 Oct 2012)
+
+  13 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
+  +hardened-sources-3.2.31.ebuild:
+  vanilla-3.2.31 + genpatches-3.2-16 + grsecurity-2.9.1-3.2.31-201210111928
 
 *hardened-sources-2.6.32-r134 (13 Oct 2012)
 
