--- a/sys-kernel/hardened-sources/ChangeLog
+++ b/sys-kernel/hardened-sources/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/hardened-sources
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/hardened-sources/ChangeLog,v 1.705 2012/10/13 18:50:24 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/hardened-sources/ChangeLog,v 1.706 2012/10/13 18:52:30 blueness Exp $
+
+*hardened-sources-3.6.1 (13 Oct 2012)
+
+  13 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
+  +hardened-sources-3.6.1.ebuild:
+  vanilla-3.6.1 + genpatches-3.6-3 + grsecurity-2.9.1-3.6.1-201210111929
 
 *hardened-sources-3.2.31 (13 Oct 2012)
 
