--- a/app-admin/apache-tools/ChangeLog
+++ b/app-admin/apache-tools/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-admin/apache-tools
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/apache-tools/ChangeLog,v 1.121 2012/10/13 08:06:38 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/apache-tools/ChangeLog,v 1.122 2012/10/13 18:55:59 blueness Exp $
+
+  13 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
+  apache-tools-2.2.23.ebuild:
+  stable ppc ppc64, bug #432284
 
   13 Oct 2012; Agostino Sarubbo <ago@gentoo.org> apache-tools-2.2.23.ebuild:
   Stable for amd64, wrt bug #432284
