--- a/www-servers/apache/ChangeLog
+++ b/www-servers/apache/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for www-servers/apache
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-servers/apache/ChangeLog,v 1.197 2012/10/13 08:06:22 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-servers/apache/ChangeLog,v 1.198 2012/10/13 18:57:10 blueness Exp $
+
+  13 Oct 2012; Anthony G. Basile <blueness@gentoo.org> apache-2.2.23.ebuild:
+  stable ppc ppc64, bug #432284
 
   13 Oct 2012; Agostino Sarubbo <ago@gentoo.org> apache-2.2.23.ebuild:
   Stable for amd64, wrt bug #432284
