--- a/dev-python/irc/ChangeLog
+++ b/dev-python/irc/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/irc
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/irc/ChangeLog,v 1.1 2012/10/13 20:49:38 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/irc/ChangeLog,v 1.2 2012/10/13 20:55:34 floppym Exp $
+
+  13 Oct 2012; Mike Gilbert <floppym@gentoo.org> irc-3.2.2.ebuild:
+  Update HOMEPAGE.
 
 *irc-3.2.2 (13 Oct 2012)
 
