--- a/net-irc/irker/ChangeLog
+++ b/net-irc/irker/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-irc/irker
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-irc/irker/ChangeLog,v 1.3 2012/10/13 21:07:45 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-irc/irker/ChangeLog,v 1.4 2012/10/13 21:16:18 floppym Exp $
+
+  13 Oct 2012; Mike Gilbert <floppym@gentoo.org> irker-1.12-r1.ebuild:
+  General cleanup.
 
   13 Oct 2012; Mike Gilbert <floppym@gentoo.org> irker-1.12-r1.ebuild:
   Force python2 shebangs.
