--- a/net-dns/bind/ChangeLog
+++ b/net-dns/bind/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-dns/bind
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/bind/ChangeLog,v 1.422 2012/10/13 16:59:52 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/bind/ChangeLog,v 1.423 2012/10/13 22:10:43 idl0r Exp $
+
+  13 Oct 2012; Christian Ruppert <idl0r@gentoo.org> bind-9.9.2.ebuild:
+  Fix python dependencies, bug 438252
 
   13 Oct 2012; Raúl Porcel <armin76@gentoo.org> bind-9.9.1_p4.ebuild:
   alpha/arm/ia64/s390/sh/sparc stable wrt #437828
