--- a/net-analyzer/ettercap/ChangeLog
+++ b/net-analyzer/ettercap/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/ettercap
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/ettercap/ChangeLog,v 1.104 2012/10/13 17:01:36 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/ettercap/ChangeLog,v 1.105 2012/10/13 22:39:45 ago Exp $
+
+  13 Oct 2012; Agostino Sarubbo <ago@gentoo.org> ettercap-0.7.5.ebuild:
+  +plugins
 
   13 Oct 2012; Raúl Porcel <armin76@gentoo.org> ettercap-0.7.5.ebuild:
   alpha/arm/sparc stable wrt #340897
