--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,13 @@
 # ChangeLog for profile directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7027 2012/10/12 06:09:02 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7028 2012/10/13 23:38:10 naota Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  13 Oct 2012; <naota@gentoo.org> package.mask:
+  Mask unstable ibus which depend on newer dconf.
 
   12 Oct 2012; Patrick Lauer <patrick@gentoo.org> package.mask:
   Removing apache 2.4 mask
